src/objects/c2g__WorkerItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpworkeritem</customHelpPage>
    <fields>
        <fullName>c2g__AttemptsRemaining__c</fullName>
        <label>Attempts Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Worker Items</relationshipLabel>
        <relationshipName>WorkerItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__EmailUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Worker Items</relationshipLabel>
        <relationshipName>WorkerItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__WorkAction__c</fullName>
        <label>Work Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post sales invoice</fullName>
                </value>
                <value>
                    <fullName>Post payable invoice</fullName>
                </value>
                <value>
                    <fullName>Post payable credit note</fullName>
                </value>
                <value>
                    <fullName>Post sales credit note</fullName>
                </value>
                <value>
                    <fullName>Post journal</fullName>
                </value>
                <value>
                    <fullName>Post and match sales credit note</fullName>
                </value>
                <value>
                    <fullName>Create journals</fullName>
                </value>
                <value>
                    <fullName>Create currency adjustment journal if necessary</fullName>
                </value>
                <value>
                    <fullName>Calculate sales tax on invoice</fullName>
                </value>
                <value>
                    <fullName>Calculate sales tax on credit note</fullName>
                </value>
                <value>
                    <fullName>Calculate tax on payable invoice</fullName>
                </value>
                <value>
                    <fullName>Calculate tax on payable credit note</fullName>
                </value>
                <value>
                    <fullName>Commit sales tax on invoice</fullName>
                </value>
                <value>
                    <fullName>Commit sales tax on credit note</fullName>
                </value>
                <value>
                    <fullName>Commit tax on payable invoice</fullName>
                </value>
                <value>
                    <fullName>Commit tax on payable credit note</fullName>
                </value>
                <value>
                    <fullName>Process intercompany transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__WorkReferenceDescription__c</fullName>
        <label>Work Reference Description</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__WorkReference__c</fullName>
        <label>Work Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Worker Item</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_WorkerItem</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Worker Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Worker Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>